--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -1,10 +1,11 @@
-@import 'variables';
-@import 'global';
-@import 'header';
-@import 'footer';
-@import 'contact';
-@import 'services';
-@import 'portfolio';
-@import 'about';
-@import 'banner';
-@import 'media-queries';
+@use 'variables';
+@use '_global';
+@use '_header';
+@use '_footer';
+@use '_contact';
+@use '_services';
+@use '_portfolio';
+@use '_about';
+@use '_banner';
+@use '_media-queries';
+@use '_loader'
