--- a/frontend/src/scss/_about.scss
+++ b/frontend/src/scss/_about.scss
@@ -1,40 +1,40 @@
-@import 'variables';
+@use 'variables';
 
 .about-container {
-  padding: $padding-xlarge;
+  padding: variables.$padding-xlarge;
   text-align: center;
   max-width: 800px;
   margin: 0 auto;
 
   .about-title {
-    font-size: $font-size-title;
-    color: $primary-color;
-    margin-bottom: $margin-large;
+    font-size: variables.$font-size-title;
+    color: variables.$primary-color;
+    margin-bottom: variables.$margin-large;
   }
 
   .about-description {
-    font-size: $font-size-base;
+    font-size: variables.$font-size-base;
     color: white;
     line-height: 1.6;
   }
 
   .about-mission {
-    font-size: $font-size-base;
+    font-size: variables.$font-size-base;
     color: white;
     line-height: 1.6;
-    margin-top: $margin-large;
+    margin-top: variables.$margin-large;
   }
 
   .about-team-title {
-    font-size: $font-size-subtitle;
-    color: $primary-color;
-    margin-top: $margin-xlarge;
+    font-size: variables.$font-size-subtitle;
+    color: variables.$primary-color;
+    margin-top: variables.$margin-xlarge;
   }
 
   .about-team-description {
-    font-size: $font-size-base;
+    font-size: variables.$font-size-base;
     color: white;
     line-height: 1.6;
-    margin-top: $margin-base;
+    margin-top: variables.$margin-base;
   }
 }
