--- a/frontend/src/scss/_services.scss
+++ b/frontend/src/scss/_services.scss
@@ -1,47 +1,47 @@
-@import 'variables';
-
+@use 'variables';
 .services-container {
-  max-width: 900px;
-  margin: $margin-xlarge auto;
+  max-width: 1200px;
+  margin: variables.$margin-xlarge auto;
   text-align: center;
 
   .services-title {
-    font-size: $font-size-subtitle;
-    color: $primary-color;
-    margin-bottom: $margin-large;
+    font-size: variables.$font-size-subtitle;
+    color: variables.$primary-color;
+    margin-bottom: variables.$margin-large;
   }
 
   .services-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: $margin-large;
-    padding: $padding-large;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: variables.$margin-large;
+    padding: variables.$padding-large;
+    place-content: center;
 
     .service-item {
-      background: $secondary-color;
-      padding: $padding-large;
-      border-radius: $border-radius;
-      font-size: $font-size-base;
-      transition: transform 0.2s ease, background $transition-base;
+      background: variables.$secondary-color;
+      padding: variables.$padding-large;
+      border-radius: variables.$border-radius;
+      font-size: variables.$font-size-base;
+      transition: transform 0.2s ease, background variables.$transition-base;
 
       &:hover {
         transform: translateY(-5px);
-        background: $hover-color;
-        color: $secondary-color;
+        background: variables.$hover-color;
+        color: variables.$secondary-color;
 
         h3 {
-          filter: drop-shadow(0 1px 1px $secondary-color);
+          filter: drop-shadow(0 1px 1px variables.$secondary-color);
         }
       }
 
       h3 {
-        font-size: $font-size-large;
-        color: $primary-color;
-        margin-bottom: $margin-base;
+        font-size: variables.$font-size-large;
+        color: variables.$primary-color;
+        margin-bottom: variables.$margin-base;
       }
 
       p {
-        font-size: $font-size-base;
+        font-size: variables.$font-size-base;
         color: white;
       }
     }
